--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -98,22 +98,26 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 {cas} & {GDL} & {gly} & {$e$} && {$\eta$} & \multicolumn{1}{c}{$G^\prime$} & \multicolumn{1}{c}{$\alpha$} & {$\xi$} && {$h$} & {$H_{min}$} & {$H_{max}$} & {$v$} && {$\Upsilon$} & {$H^*/H$} & {$\lambda_{xp}$} & {$\lambda_{D}$} & {$\lambda_{P}$} & {$\lambda_{D+P}$} \\ 
 {\%w} & {\%w} & {\%w} & \si{\micro\metre} && \si{\milli\pascal\second} & \multicolumn{1}{c}{\si{\pascal}} & \si{\square\nano\metre} & \si{\micro\metre} && \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre/\second} && {$10^8$} &  & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} \\ 
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-4 & 4 & 0 & 74.5 && 1.0 & 487 & 67000 & 4.3 && 38.3 & 6.3 & 29.3 & 0.11 && 1.62 & 0.97 & 0.89 & 1.20 & 0.88 & 1.22 \\ 
-4 & 4 & 0 & 92.4 && 1.0 & 487 & 67000 & 4.3 && 27.8 & 13.5 & 50.8 & 0.20 && 1.57 & 0.45 & 0.85 & 1.01 & 1.10 & 1.20 \\ 
-4 & 4 & 0 & 106.1 && 1.0 & 487 & 67000 & 4.3 && 32.7 & 30.7 & 42.9 & 0.14 && 2.54 & 0.24 & 1.52 & 1.24 & 1.85 & 1.90 \\ 
-4 & 4 & 0 & 138.0 && 1.0 & 487 & 67000 & 3.7 && 48.2 & 32.0 & 63.9 & 0.11 && 4.05 & 0.23 & 2.46 & 1.69 & 2.56 & 2.62 \\ 
+4 & 4 & 0 & 74.5 && 1.0 & 487 & 67000 & 4.9 && 38.3 & 6.3 & 29.3 & 0.11 && 1.62 & 0.97 & 0.89 & 1.20 & 0.88 & 1.22 \\ 
+4 & 4 & 0 & 92.4 && 1.0 & 487 & 67000 & 4.9 && 27.8 & 13.5 & 50.8 & 0.20 && 1.57 & 0.45 & 0.85 & 1.01 & 1.10 & 1.20 \\ 
+4 & 4 & 0 & 106.1 && 1.0 & 487 & 67000 & 4.9 && 32.7 & 30.7 & 42.9 & 0.14 && 2.54 & 0.24 & 1.52 & 1.24 & 1.85 & 1.90 \\ 
+4 & 4 & 0 & 138.0 && 1.0 & 487 & 67000 & 4.9 && 48.2 & 32.0 & 63.9 & 0.11 && 4.05 & 0.23 & 2.46 & 1.69 & 2.56 & 2.62 \\ 
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
 8 & 8 & 0 & 85.2 && 1.0 & 1817 & 2150 & 3.1 && 49.8 & 10.0 & 26.8 & 0.10 && 6.50 & 0.14 & 1.00 & 0.82 & 1.60 & 1.61 \\ 
 8 & 8 & 0 & 91.0 && 1.0 & 1817 & 2150 & 3.1 && 23.4 & 30.2 & 47.7 & 0.10 && 12.05 & 0.05 & 1.50 & 0.66 & 2.04 & 2.04 \\ 
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-4 & 4 & 20 & 63.7 && 1.6 & 1142 & 24600 & 2.8 && 39.1 & 1.2 & 10.9 & 0.21 && 0.86 & 2.66 & 0.49 & 0.80 & 0.36 & 0.80 \\ 
-4 & 4 & 35 & 82.3 && 2.7 & 1858 & 13000 & 2.5 && 58.3 & 0.9 & 12.6 & 0.02 && 10.98 & 4.03 & 0.61 & 1.27 & 0.56 & 1.27 \\ 
-4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 2.3 && 65.1 & 7.9 & 14.4 & 0.02 && 16.30 & 0.34 & 1.23 & 1.50 & 1.85 & 1.96 \\ 
+4 & 4 & 20 & 63.7 && 1.6 & 1142 & 24600 & 2.7 && 39.1 & 1.2 & 10.9 & 0.21 && 0.86 & 2.66 & 0.49 & 0.80 & 0.36 & 0.80 \\ 
+4 & 4 & 35 & 82.3 && 2.7 & 1858 & 13000 & 1.8 && 58.3 & 0.9 & 12.6 & 0.02 && 10.98 & 4.03 & 0.61 & 1.27 & 0.56 & 1.27 \\ 
+4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 16.30 & 0.34 & 1.23 & 1.50 & 1.85 & 1.96 \\ 
 \end{tabular}
 \caption{Characteristics of the samples discussed in the main text}
 \label{tab:data}
 \end{table*}
 
-
+\begin{figure}
+	\includegraphics{mesh}
+	\caption{Gel microstructure. (a) Detail of a confocal micrograph of a 4\%w casein, 4\%w GDL in water, when only the slide is coated (not the cover slip). Time corresponds to the minimum in mesh size. Scale bar is \SI{10}{\micro\metre}. (b) Corresponding radial averaged Fourier transform. Black line is the best fit by Eq.XXX with $\xi=\SI{4.9}{\micro\metre}$ and $d=2.4$. Inset shows the center of the non radial average spectrum (arbitrary logarithmic color scale). Scale bar is \SI{10}{\per\micro\metre}. (c-d) Idem in a 50\%w glycerol solvent, with $\xi=\SI{1.5}{\micro\metre}$ and $d=2.5$.}
+	\label{fig:mesh}
+\end{figure}
 
 \end{document}
