--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -56,4 +56,11 @@
 	\label{fig:mesh}
 \end{figure}
 
+\begin{figure*}
+	\tikzsetnextfilename{permeability}
+	\input{fig_plis/permeability.pgf}
+	\caption{Permeability measurements. (a) Schematic representation of the experiment. (b-c) Evolution of the height of the interface in tube 1 relative to the final height in tube 2. Black line is the best exponential fit $Ae^{-t/\tau}$. (b) Gel is 4\%w casein, 4\%w GDL in water, $H=\SI{2.3}{\milli\metre}$ and $\tau=\SI{57}{\minute}$. (c) Idem in 50\%w glycerol, $H=\SI{4}{\milli\metre}$ and $\tau=\SI{100}{\hour}$.}
+	\label{fig:permeability}
+\end{figure*}
+
 \end{document}
