--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -63,4 +63,11 @@
 	\label{fig:permeability}
 \end{figure*}
 
+\begin{figure}
+	\tikzsetnextfilename{growth}
+	\input{fig_plis/growth.pgf}
+	\caption{Growth of the instability. (a) Evolution of the gel velocity $v$, integrated over the whole surface. Inset: Evolution of the amplitude (peak to peak measurement) in semi logarithmic scale. Black line is the best exponential fit with $\tau=\SI{90}{\second}$. (b) Evolution of the bottom profile of the gel from the onset of instability (yellow) to the contact to both walls (brown). Note that the lateral size of the blister evolve in this regime. Thick black curve is the profile at much longer time. Note that blister foot (highlighted by the orange vertical line) has not moved since contact.}
+	\label{fig:growth}
+\end{figure}
+
 \end{document}
