--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -95,22 +95,27 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 %\toprule
 \multicolumn{4}{c}{Preparation} & &  \multicolumn{4}{c}{Properties} & & \multicolumn{4}{c}{Measurements} & & \multicolumn{6}{c}{Results} \\ 
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-{cas} & {GDL} & {gly} & {$e$} && {$\eta$} & \multicolumn{1}{c}{$G^\prime$} & \multicolumn{1}{c}{$\alpha$} & {$\xi$} && {$h$} & {$H_{min}$} & {$H_{max}$} & {$v$} && {$\Upsilon$} & {$H^*/H$} & {$\lambda_{xp}$} & {$\lambda_{D}$} & {$\lambda_{P}$} & {$\lambda_{D+P}$} \\ 
+{cas} & {GDL} & {gly} & {$e$} && {$\eta$} & \multicolumn{1}{c}{$G^\prime$} & \multicolumn{1}{c}{$\alpha$} & {$\xi$} && {$h$} & {$H_{min}$} & {$H_{max}$} & {$v$} && {$\Upsilon$} & {$H/H^*$} & {$\lambda_{xp}$} & {$\lambda_{D}$} & {$\lambda_{P}$} & {$\lambda_{D+P}$} \\ 
 {\%w} & {\%w} & {\%w} & \si{\micro\metre} && \si{\milli\pascal\second} & \multicolumn{1}{c}{\si{\pascal}} & \si{\square\nano\metre} & \si{\micro\metre} && \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre/\second} && {$10^8$} &  & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} \\ 
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-4 & 4 & 0 & 74.5 && 1.0 & 487 & 67000 & 4.9 && 38.3 & 6.3 & 29.3 & 0.11 && 1.62 & 0.97 & 0.89 & 1.20 & 0.88 & 1.22 \\ 
-4 & 4 & 0 & 92.4 && 1.0 & 487 & 67000 & 4.9 && 27.8 & 13.5 & 50.8 & 0.20 && 1.57 & 0.45 & 0.85 & 1.01 & 1.10 & 1.20 \\ 
-4 & 4 & 0 & 106.1 && 1.0 & 487 & 67000 & 4.9 && 32.7 & 30.7 & 42.9 & 0.14 && 2.54 & 0.24 & 1.52 & 1.24 & 1.85 & 1.90 \\ 
-4 & 4 & 0 & 138.0 && 1.0 & 487 & 67000 & 4.9 && 48.2 & 32.0 & 63.9 & 0.11 && 4.05 & 0.23 & 1.62 & 1.69 & 2.56 & 2.62 \\ 
+%ech2
+4 & 4 & 0 & 74.5 && 1.0 & 487 & 67000 & 4.9 && 38.3 & 6.3 & 29.3 & 0.11 && 1.62 & 1.03 & 0.89 & 1.20 & 0.88 & 1.22 \\ 
+& & & && & & & && 40.2 & 1.7 & 32.9 & 0.09 && 0.70 & 0.18 & 0.45 & 1.00 & 0.39 & 1.00\\
+4 & 4 & 0 & 92.4 && 1.0 & 487 & 67000 & 4.9 && 27.8 & 13.5 & 50.8 & 0.20 && 1.57 & 2.23 & 0.85 & 1.01 & 1.10 & 1.20 \\ 
+4 & 4 & 0 & 106.1 && 1.0 & 487 & 67000 & 4.9 && 32.7 & 30.7 & 42.9 & 0.14 && 2.54 & 4.25 & 1.52 & 1.24 & 1.85 & 1.90 \\ 
+4 & 4 & 0 & 138.0 && 1.0 & 487 & 67000 & 4.9 && 48.2 & 32.0 & 63.9 & 0.11 && 4.05 & 4.36 & 1.62 & 1.69 & 2.56 & 2.62 \\
+& & & && & & & && 57.4 & 2.1 & 80.9 & 0.05 && 1.25 & 0.17 & 0.81 & 1.37 & 0.6 & 1.37 \\
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-8 & 8 & 0 & 85.2 && 1.0 & 1817 & 2150 & 3.1 && 49.8 & 10.0 & 26.8 & 0.10 && 6.50 & 0.14 & 1.00 & 0.82 & 1.60 & 1.61 \\ 
-8 & 8 & 0 & 91.0 && 1.0 & 1817 & 2150 & 3.1 && 23.4 & 30.2 & 47.7 & 0.10 && 12.05 & 0.05 & 1.50 & 0.66 & 2.04 & 2.04 \\ 
+8 & 8 & 0 & 85.2 && 1.0 & 1817 & 2150 & 3.1 && 49.8 & 10.0 & 26.8 & 0.10 && 6.50 & 7.23 & 1.00 & 0.82 & 1.60 & 1.61 \\ 
+& & & && & & & && 60.5 & 1.1 & 24.0 & 0.11 && 1.94 & 0.81 & 0.50 & 0.77 & 0.55 & 0.82\\
+8 & 8 & 0 & 91.0 && 1.0 & 1817 & 2150 & 3.1 && 23.4 & 30.2 & 47.7 & 0.10 && 12.05 & 18.51 & 1.50 & 0.66 & 2.04 & 2.04 \\ 
+& & & && & & & && 30.7 & 1.6 & 55.0 & 0.02 && 15.60 & 0.61 & 0.75 & 0.82 & 0.59 & 0.83 \\
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-4 & 4 & 20 & 63.7 && 1.6 & 1142 & 24600 & 2.7 && 39.1 & 1.2 & 10.9 & 0.21 && 0.86 & 2.66 & 0.49 & 0.80 & 0.36 & 0.80 \\ 
-4 & 4 & 35 & 82.3 && 2.7 & 1858 & 25300 & 1.8 && 58.3 & 0.9 & 12.6 & 0.02 && 10.98 & 4.03 & 0.61 & 1.06 & 0.56 & 1.06 \\ 
-4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 16.30 & 0.34 & 1.23 & 1.50 & 1.85 & 1.96 \\ 
+4 & 4 & 20 & 63.7 && 1.6 & 1142 & 24600 & 2.7 && 39.1 & 1.2 & 10.9 & 0.21 && 0.86 & 0.38 & 0.49 & 0.80 & 0.36 & 0.80 \\ 
+4 & 4 & 35 & 82.3 && 2.7 & 1858 & 25300 & 1.8 && 58.3 & 0.9 & 12.6 & 0.02 && 10.98 & 0.24 & 0.61 & 1.06 & 0.56 & 1.06 \\ 
+4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 16.30 & 2.94 & 1.23 & 1.50 & 1.85 & 1.96 \\ 
 \end{tabular}
-\caption{Characteristics of the samples discussed in the main text}
+\caption{Characteristics of the samples discussed in the main text. Lines where preparation and properties are left blank correspond to the average of the secondary blisters of the previous line.}
 \label{tab:data}
 \end{table*}
 
