--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -80,7 +80,7 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 
 \begin{figure*}
 	\includegraphics{Darcy_vs_Poiseuille}
-	\caption{Comparing model predictions with measured wavelengths. Dashed line is the best linear fit through the origin (prefactor is 0.81 in a, 0.65 in b), continuous line is the best affine fit ($\lambda_{xp}=0.56\lambda_{th}+\SI{0.28}{\milli\metre}$).}
+	\caption{Comparing model predictions with measured wavelengths. Symbols are empty when $H<H^*$ (Darcy mode) and full when $H>H^*$ (Poiseuille mode). Orange dots come from primary pattern, yellow squares from secondary blisters. Dashed lines are the best linear fit through the origin taking only into account the points that should be (a) in Darcy mode, (b) in Poiseuille mode (c) all points. Prefactors are 0.63, 0.69 and 0.67 respectively. Continuous line is the best affine fit ($\lambda_{xp}=0.52\lambda_{th}+\SI{0.33}{\milli\metre}$) to all the points in (b).}
 	\label{fig:DarcyPoiseuille}
 \end{figure*}
 
@@ -99,21 +99,21 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 {\%w} & {\%w} & {\%w} & \si{\micro\metre} && \si{\milli\pascal\second} & \multicolumn{1}{c}{\si{\pascal}} & \si{\square\nano\metre} & \si{\micro\metre} && \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre/\second} && {$10^8$} &  & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} \\ 
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
 %ech2
-4 & 4 & 0 & 74.5 && 1.0 & 487 & 67000 & 4.9 && 38.3 & 6.3 & 29.3 & 0.11 && 1.62 & 1.03 & 0.89 & 1.20 & 0.88 & 1.22 \\ 
-& & & && & & & && 40.2 & 1.7 & 32.9 & 0.09 && 0.70 & 0.18 & 0.45 & 1.00 & 0.39 & 1.00\\
-4 & 4 & 0 & 92.4 && 1.0 & 487 & 67000 & 4.9 && 27.8 & 13.5 & 50.8 & 0.20 && 1.57 & 2.23 & 0.85 & 1.01 & 1.10 & 1.20 \\ 
-4 & 4 & 0 & 106.1 && 1.0 & 487 & 67000 & 4.9 && 32.7 & 30.7 & 42.9 & 0.14 && 2.54 & 4.25 & 1.52 & 1.24 & 1.85 & 1.90 \\ 
-4 & 4 & 0 & 138.0 && 1.0 & 487 & 67000 & 4.9 && 48.2 & 32.0 & 63.9 & 0.11 && 4.05 & 4.36 & 1.62 & 1.69 & 2.56 & 2.62 \\
-& & & && & & & && 57.4 & 2.1 & 80.9 & 0.05 && 1.25 & 0.17 & 0.81 & 1.37 & 0.6 & 1.37 \\
+4 & 4 & 0 & 74.5 && 1.0 & 487 & 67000 & 4.9 && 38.3 & 6.3 & 29.3 & 0.11 && 1.62 & 0.54 & 0.89 & 1.20 & 0.88 & 1.22 \\ 
+& & & && & & & && 40.2 & 1.7 & 32.9 & 0.09 && 0.70 & 0.09 & 0.45 & 1.00 & 0.39 & 1.00\\
+4 & 4 & 0 & 92.4 && 1.0 & 487 & 67000 & 4.9 && 27.8 & 13.5 & 50.8 & 0.20 && 1.57 & 1.17 & 0.85 & 1.01 & 1.10 & 1.20 \\ 
+4 & 4 & 0 & 106.1 && 1.0 & 487 & 67000 & 4.9 && 32.7 & 30.7 & 42.9 & 0.14 && 2.54 & 2.23 & 1.52 & 1.24 & 1.85 & 1.90 \\ 
+4 & 4 & 0 & 138.0 && 1.0 & 487 & 67000 & 4.9 && 48.2 & 32.0 & 63.9 & 0.11 && 4.05 & 2.28 & 1.62 & 1.69 & 2.56 & 2.62 \\
+& & & && & & & && 57.4 & 2.1 & 80.9 & 0.05 && 1.25 & 0.09 & 0.81 & 1.37 & 0.6 & 1.37 \\
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-8 & 8 & 0 & 85.2 && 1.0 & 1817 & 2150 & 3.1 && 49.8 & 10.0 & 26.8 & 0.10 && 6.50 & 7.23 & 1.00 & 0.82 & 1.60 & 1.61 \\ 
-& & & && & & & && 60.5 & 1.1 & 24.0 & 0.11 && 1.94 & 0.81 & 0.50 & 0.77 & 0.55 & 0.82\\
-8 & 8 & 0 & 91.0 && 1.0 & 1817 & 2150 & 3.1 && 23.4 & 30.2 & 47.7 & 0.10 && 12.05 & 18.51 & 1.50 & 0.66 & 2.04 & 2.04 \\ 
-& & & && & & & && 30.7 & 1.6 & 55.0 & 0.02 && 15.60 & 0.61 & 0.75 & 0.82 & 0.59 & 0.83 \\
+8 & 8 & 0 & 85.2 && 1.0 & 1817 & 2150 & 3.1 && 49.8 & 10.0 & 26.8 & 0.10 && 6.50 & 3.79 & 1.00 & 0.82 & 1.60 & 1.61 \\ 
+& & & && & & & && 60.5 & 1.1 & 24.0 & 0.11 && 1.94 & 0.42 & 0.50 & 0.77 & 0.55 & 0.82\\
+8 & 8 & 0 & 91.0 && 1.0 & 1817 & 2150 & 3.1 && 23.4 & 30.2 & 47.7 & 0.10 && 12.05 & 9.70 & 1.50 & 0.66 & 2.04 & 2.04 \\ 
+& & & && & & & && 30.7 & 1.6 & 55.0 & 0.02 && 15.60 & 0.32 & 0.75 & 0.82 & 0.59 & 0.83 \\
 \cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-4 & 4 & 20 & 63.7 && 1.6 & 1142 & 24600 & 2.7 && 39.1 & 1.2 & 10.9 & 0.21 && 0.86 & 0.38 & 0.49 & 0.80 & 0.36 & 0.80 \\ 
-4 & 4 & 35 & 82.3 && 2.7 & 1858 & 25300 & 1.8 && 58.3 & 0.9 & 12.6 & 0.02 && 10.98 & 0.24 & 0.61 & 1.06 & 0.56 & 1.06 \\ 
-4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 16.30 & 2.94 & 1.23 & 1.50 & 1.85 & 1.96 \\ 
+4 & 4 & 20 & 63.7 && 1.6 & 1142 & 24600 & 2.7 && 39.1 & 1.2 & 10.9 & 0.21 && 0.86 & 0.20 & 0.49 & 0.80 & 0.36 & 0.80 \\ 
+4 & 4 & 35 & 82.3 && 2.7 & 1858 & 25300 & 1.8 && 58.3 & 0.9 & 12.6 & 0.02 && 10.98 & 0.13 & 0.61 & 1.06 & 0.56 & 1.06 \\ 
+4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 16.30 & 1.52 & 1.23 & 1.50 & 1.85 & 1.96 \\ 
 \end{tabular}
 \caption{Characteristics of the samples discussed in the main text. Lines where preparation and properties are left blank correspond to the average of the secondary blisters of the previous line.}
 \label{tab:data}
