fig:dynamics c BW

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -62,7 +62,7 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 
 \begin{figure}
 	\includegraphics{dynamics}
-	\caption{Dynamics of pattern formation. (a) Light transmission microscopy. The same area is highlighted in yellow on all panels to show that the initial pattern is not evolving. (b) 3D reconstruction from fluorescent confocal microscopy. (c) Time dependent Fourier spectrum of (a). First peak saturating around \SI{17}{\per\milli\metre} corresponds to the mean distance between two lines of the primary pattern, i.e. $\lambda/2$. Scale bars are \SI{1}{\milli\metre}.}
+	\caption{Dynamics of pattern formation. (a) Light transmission microscopy. The same area is highlighted in yellow on all panels to show that the initial pattern is not evolving. (b) 3D reconstruction from fluorescent confocal microscopy. (c) Fourier spectrum of binary altitudes of (a) corresponding to primary, secondary and tertiary patterns. Inset: reconstructed binary altitudes at \SI{2}{\hour}. Scale bars are \SI{1}{\milli\metre}.}
 	\label{fig:dynamics}
 \end{figure}
 
